MM-14897: Ability to add and remove groups from channels.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -88,6 +88,7 @@
   "add_emoji.save": "Save",
   "add_emoji.saving": "Saving...",
   "add_groups_to_team.title": "Add New Groups To {teamName} Team",
+  "add_groups_to_channel.title": "Add New Groups To {channelName} Channel",
   "add_incoming_webhook.cancel": "Cancel",
   "add_incoming_webhook.channel": "Channel",
   "add_incoming_webhook.channel.help": "The default public or private channel that receives the webhook payloads. You must belong to the private channel when setting up the webhook.",
@@ -2494,6 +2495,7 @@
   "navbar_dropdown.teamLink": "Get Team Invite Link",
   "navbar_dropdown.teamSettings": "Team Settings",
   "navbar.addMembers": "Add Members",
+  "navbar.addGroups": "Add Groups",
   "navbar.click": "Click here",
   "navbar.clickToAddHeader": "{clickHere} to add one.",
   "navbar.noHeader": "No channel header yet.",
